world-clock: Fix alignment/padding/clipping issues
There were some visual bugs with the pop-up list of time-zones:
1- The list of items wasn't being clipped
2- The scroll-bar overlapped the background
3- The text was centre-aligned

These three bugs are fixed by this commit.

This goes some way to solving MeeGo bug #1556

--- a/panels/datetime/data/theme/date-panel.css
+++ b/panels/datetime/data/theme/date-panel.css
@@ -72,14 +72,21 @@ MxEntry.ZoneSearchEntry
 {
 }
 
-*#CompletionScrollView
+*#CompletionFrame
 {
   border-image: url('drop-down-panel.png') 10;
+  padding: 8;
+}
+
+/*
+*#CompletionScrollView
+{
 }
 
 *#CompletionListView
 {
 }
+*/
 
 MxButton.CompletionListButton
 {
